Deprecate jvmArgs in favor of javaOpts array.